--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -15,6 +15,10 @@
     "ChatId": ""
   },
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -27,7 +31,7 @@
         "Args": {
           "formatter": {
             "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-            "template": "{ {timestamp: @t, level: @l, message: @m, ..@p} }\n"
+            "template": "{@t: @t, @l: @l, @m: @m, ..@p}\n"
           }
         }
       }
