fix: resolve Serilog ExpressionTemplate rendering issues in Railway logs
Relates to #88, #90

--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -31,7 +31,7 @@
         "Args": {
           "formatter": {
             "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-            "template": "{@t: @t, @l: @l, @m: @m, ..@p}\n"
+            "template": "{@t:yyyy-MM-dd HH:mm:ss.fff zzz} [{@l:u3}] {@m}\n{@x}"
           }
         }
       }
