fix: implement true structured JSON logging for Railway observability
Relates to #88, #90

--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -31,7 +31,7 @@
         "Args": {
           "formatter": {
             "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-            "template": "{@t:yyyy-MM-dd HH:mm:ss.fff zzz} [{@l:u3}] {@m}\n{@x}"
+            "template": "{ {timestamp: @t, level: @l, message: @m, exception: @x, ..@p} }\n"
           }
         }
       }
