--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -29,10 +29,7 @@
       {
         "Name": "Console",
         "Args": {
-          "formatter": {
-            "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-            "template": "{ {timestamp: @t, level: @l, message: @m, exception: @x, ..@p} }\n"
-          }
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
     ],
